Fix Email-editor package version in composer (#60390)
* Update `pelago/emogrifier` to version 7.3 and refresh dependencies in `composer.lock`.

* Set `woocommerce/email-editor` version to 1.4.1 and update `composer.lock`.

* Update `sample-email.html` content by removing unnecessary newlines

After using the newer Emogrifier package, the output does not contain new lines

--- a/plugins/woocommerce/composer.json
+++ b/plugins/woocommerce/composer.json
@@ -45,10 +45,10 @@
 		"composer/installers": "^1.9",
 		"maxmind-db/reader": "^1.11",
 		"opis/json-schema": "*",
-		"pelago/emogrifier": "^6.0",
+		"pelago/emogrifier": "^7.3",
 		"woocommerce/action-scheduler": "3.9.3",
 		"woocommerce/blueprint": "*",
-		"woocommerce/email-editor": "*"
+		"woocommerce/email-editor": "1.4.1"
 	},
 	"require-dev": {
 		"automattic/jetpack-changelogger": "^3.3.0",
