e2e tests blocks: Update Search reset button locator to fix strict mode violation (#60586)

--- a/plugins/woocommerce/package.json
+++ b/plugins/woocommerce/package.json
@@ -669,6 +669,7 @@
 						}
 					},
 					"events": [
+						"pull_request",
 						"nightly-checks",
 						"release-checks",
 						"blocks-e2e-wp-pre-release"
@@ -705,6 +706,7 @@
 						}
 					},
 					"events": [
+						"pull_request",
 						"nightly-checks",
 						"release-checks",
 						"blocks-e2e-wp-latest-1"
