Fix the branch name for the `Release: Update stable tag` workflow (#60544)
* Fix the branch name for the `Release: Update stable tag` workflow

* Remove unneeded var

--- a/.github/workflows/release-update-stable-tag.yml
+++ b/.github/workflows/release-update-stable-tag.yml
@@ -107,7 +107,8 @@ jobs:
 
             const branches = ['trunk'];
 
-            let version = targetVersion;
+            let version = targetVersion.match(/^\d+\.\d+/)[0];
+
             while ( version !== trunkVersion ) {
               branches.push( `release/${ version }` );
               version = getNextVersion( version );
