Add support for the WooCommerce Collection Block into the email block editor (#60941)
* Export `useIsEmailEditor` hook from email editor package.

* Add `Product_Collection` block renderer for WooCommerce email editor

This is the first iteration for the rendering products.

* Add `email` property support to multiple WooCommerce blocks for email editor integration

* Add `@woocommerce/email-editor` dependency to WooCommerce blocks package

* Add `useEmailPaginationAdjustments` hook for removing pagination in email editor

Integrate pagination adjustment logic into the product collection block to ensure proper behavior when using the email editor, specifically removing pagination blocks for grid layouts.

* Restrict layout and dimension controls in product collection block for email editor

Integrate `useIsEmailEditor` logic to conditionally hide layout, width, and pagination controls when in the email editor to ensure proper behavior.

* Add `useEmailColumnAdjustments` hook to enforce single-column layout in email editor

Integrate column adjustment logic into the product collection block to ensure proper layout when using the email editor, forcing columns to 1.

* Refine conditional rendering of controls in product collection block to align with email editor behavior

* Add `viewScriptModule` and `style` properties to product price block configuration

* Add `Product_Button`, `Product_Image`, and `Product_Price` block renderers for WooCommerce Email Editor integration

* Create WooCommerce block renders integration and move related blocks

* Fix spacing between rendered products

* Refactor `Product_Image` renderer to improve badge handling

* Refactor `Product_Button` renderer to improve style handling and simplify block attribute management

* Refactor WooCommerce block renderers

Unified styles handling, remove redundant code, and enhance rendering context usage

* Add changelog for the Email Editor PHP package.

* Add changelog for the Email Editor JS package.


--- a/plugins/woocommerce/client/blocks/package.json
+++ b/plugins/woocommerce/client/blocks/package.json
@@ -256,6 +256,7 @@
 		"@emotion/styled": "^11.11.0",
 		"@preact/signals": "^1.3.0",
 		"@woocommerce/sanitize": "workspace:*",
+		"@woocommerce/email-editor": "workspace:*",
 		"@woocommerce/tracks": "workspace:*",
 		"@wordpress/a11y": "4.22.0",
 		"@wordpress/autop": "3.16.0",
@@ -432,6 +433,11 @@
 			"allowUsuallyExcludedPaths": true,
 			"files": [
 				"package.json",
+				"node_modules/@woocommerce/email-editor/build",
+				"node_modules/@woocommerce/email-editor/build-module",
+				"node_modules/@woocommerce/email-editor/build-style",
+				"node_modules/@woocommerce/email-editor/build-types",
+				"node_modules/@woocommerce/email-editor/assets",
 				"node_modules/@woocommerce/tracks/build",
 				"node_modules/@woocommerce/tracks/build-module",
 				"node_modules/@woocommerce/tracks/build-types",
