iAPI MiniCart: Activate feature flag by default (#60823)
* Remove experimental feature

* Make feature flag default to true in both dev and prod

* Try to run react minicart e2e tests

* Add changefile(s) from automation for the following project(s): woocommerce, woocommerce/client/admin

* Rename the new workflow

* Delete the `Update wp-env config` step, which was necessary

* Add BUILDKITE_ANALYTICS_TOKEN

* ??

* Revert "??"

This reverts commit d319862d9acd5bb2b7863692dc72bfc36612d05f.

* Try running all tests

* Try again

* Try again from scratch

* Try running only e2e jobs

* Use core for setOutput

* Check jobs file

* Try now setOutput approach

* Try filtering the ci-jobs

* Build the monorepo utils

* Change feature flag

* Fix lint

* Try setting development.json as well

* Change e2e locators

* Add dot to quantity description label

* Revert "Add dot to quantity description label"

This reverts commit f4c42304405de611e3f32d27988a48cf4dbde32b.

* Revert "Change e2e locators"

This reverts commit 83811c922dc36f4d10166e52608825472ad6ef61.

* Add dot to quantity description label

* Fix mini-cart-block.shopper tests

* Fix mini-cart tests

* Try fix for add-to-cart-with-options test.

* Revert "Try fix for add-to-cart-with-options test."

This reverts commit fa9ef2dfb1e641891d742fa3ac81ebcf5435a269.

* Fix PHP unit tests

* Try fix for add-to-cart-with-options group products test

* Skip translation tests for iAPI minicart

* Refresh cart items on MiniCart load

* Add changefile(s) from automation for the following project(s): @woocommerce/e2e-utils-playwright, woocommerce, woocommerce/client/admin

* Fix lint

* Switch labels conditionally depending on minicart version

* Remove `test.only`

* Fix tax label e2e test

* Fix empty arrays in WP 6.7

* Update GH token

* Fix empty variation in WP 6.7

* Correct changelog description for Store API endpoint fix

* Remove obsolete test-reports job from legacy-minicart-e2e-tests

* Add changefile(s) from automa

--- a/plugins/woocommerce/client/blocks/package.json
+++ b/plugins/woocommerce/client/blocks/package.json
@@ -80,6 +80,7 @@
 		"test:e2e:block-theme": "pnpm run test:e2e block_theme",
 		"test:e2e:classic-theme": "pnpm run test:e2e classic_theme",
 		"test:e2e:block-theme-with-templates": "pnpm run test:e2e block_theme_with_templates",
+		"test:e2e:legacy-mini-cart": "sh ./bin/check-env.sh && pnpm playwright test --config=tests/e2e/playwright.config.ts --project=legacy-mini-cart",
 		"test:e2e:jest": "echo 'test:e2e:jest is no more. Use test:e2e instead.'",
 		"test:e2e:jest:dev": "echo 'test:e2e:jest is no more. Use test:e2e instead.'",
 		"test:e2e:jest:dev-watch": "echo 'test:e2e:jest is no more. Use test:e2e instead.'",
