Update PHP package version in the prepare script (#61181)
* Update email-editor dependency in WooCommerce composer.json to load the mirrored version

* Add support for WooCommerce plugin version updates in package preparation

- Introduced constants for plugin paths in const.ts.
- Enhanced PackagePrepare command to update composer.json and composer.lock for PHP packages used in the WooCommerce plugin.
- Added error handling for cases where the package is not utilized in the WooCommerce plugin.

* Refresh dependencies: Update composer.lock files for WooCommerce dependencies

* Add changelog file

* Ignore the output of the composer show. It's not required.

--- a/plugins/woocommerce/composer.json
+++ b/plugins/woocommerce/composer.json
@@ -52,7 +52,7 @@
 		"pelago/emogrifier": "7.3.0",
 		"woocommerce/action-scheduler": "3.9.3",
 		"woocommerce/blueprint": "*",
-		"woocommerce/email-editor": "1.7.0",
+		"woocommerce/email-editor": "*",
 		"wordpress/abilities-api": "^0.1.1",
 		"wordpress/mcp-adapter": "dev-trunk#7a2d22cff92328bc94f5b1648a66ae4273e949c5"
 	},
