--- a/packages/js/email-editor/package.json
+++ b/packages/js/email-editor/package.json
@@ -91,6 +91,7 @@
 		"@wordpress/preferences": "wp-6.6",
 		"@wordpress/private-apis": "wp-6.6",
 		"@wordpress/rich-text": "wp-6.6",
+		"@wordpress/priority-queue": "wp-6.6",
 		"@wordpress/url": "wp-6.6",
 		"clsx": "2.1.x",
 		"deepmerge": "^4.3.1",
