Update `@automattic/webpack-rtl-plugin` version (#59425)
* Update `@automattic/webpack-rtl-plugin` version
This fixes the WEBPACK_DEPRECATION_ARRAY_TO_SET_PUSH build warnings

* Update lock file

* Add changelog

* add changelog

* prevent .rtl.css file outputs and activate minification

* Prevent .rtl suffix for chunk files

* Fix lint error

--- a/packages/js/product-editor/package.json
+++ b/packages/js/product-editor/package.json
@@ -124,7 +124,7 @@
 		"webpack": "5.97.x",
 		"webpack-cli": "5.1.x",
 		"webpack-remove-empty-scripts": "1.0.x",
-		"webpack-rtl-plugin": "2.0.x",
+		"@automattic/webpack-rtl-plugin": "6.0.x",
 		"wireit": "0.14.12"
 	},
 	"scripts": {
