--- a/packages/js/internal-style-build/package.json
+++ b/packages/js/internal-style-build/package.json
@@ -46,7 +46,7 @@
 		"postcss-loader": "4.3.x",
 		"sass-loader": "10.5.x",
 		"webpack-remove-empty-scripts": "1.0.x",
-		"webpack-rtl-plugin": "2.0.x"
+		"@automattic/webpack-rtl-plugin": "6.0.x"
 	},
 	"private": true,
 	"devDependencies": {
