dev: update CI configuration for PHP tests with WP pre-release (#61539)

--- a/plugins/woocommerce/package.json
+++ b/plugins/woocommerce/package.json
@@ -215,11 +215,9 @@
 					],
 					"onlyForDependencies": [],
 					"changes": [
-						"client/admin/config/*.json",
-						"composer.json",
-						"composer.lock",
-						"**/*.php",
-						".wp-env.json",
+						"tests/legacy/**",
+						"tests/php/**",
+						"tests/unit-tests/**",
 						"phpunit.xml"
 					],
 					"testEnv": {
