dev: fix CI configuration for blocks e2e (#61647)

--- a/plugins/woocommerce/package.json
+++ b/plugins/woocommerce/package.json
@@ -784,6 +784,7 @@
 					"changes": [
 						"client/blocks/tests/e2e/**"
 					],
+					"onlyForDependencies": [],
 					"testEnv": {
 						"start": "env:start:blocks",
 						"config": {
@@ -821,6 +822,7 @@
 					"changes": [
 						"client/blocks/tests/e2e/**"
 					],
+					"onlyForDependencies": [],
 					"testEnv": {
 						"start": "env:start:blocks",
 						"config": {
