Update CODEOWNERS and GitHub configuration for Email Editor packages (#61683)
* Update CODEOWNERS and GitHub configuration for Email Editor packages and integrations

- Added CODEOWNERS entries for Email Editor packages and integrations, assigning ownership to the @woocommerce/ballade team.
- Updated GitHub automation configuration to assign PRs related to Email Editor packages to the @woocommerce/ballade team.

* Fix formatting in project-community-pr-assigner.yml by ensuring consistent spacing for Ballade entry under email-editor packages.

--- a/.github/automate-team-review-assignment-config.yml
+++ b/.github/automate-team-review-assignment-config.yml
@@ -23,3 +23,11 @@ when:
     assign:
       teams:
         - flux
+  - author:
+      teamIs:
+        - ballade
+      ignore:
+        nameIs:
+    assign:
+      teams:
+        - ballade
