Email Editor: Add 'woocommerce-email-editor' plugin area (#61666)
* Email Editor: Add Editor extension component

* Document the `woocommerce_email_editor_extension_component` filter

* Add changelog

* Rework using PluginArea

* Update pnpm-lock.yaml

--- a/packages/js/email-editor/package.json
+++ b/packages/js/email-editor/package.json
@@ -88,10 +88,11 @@
 		"@wordpress/keycodes": "wp-6.6",
 		"@wordpress/media-utils": "wp-6.6",
 		"@wordpress/notices": "wp-6.6",
+		"@wordpress/plugins": "wp-6.6",
 		"@wordpress/preferences": "wp-6.6",
+		"@wordpress/priority-queue": "wp-6.6",
 		"@wordpress/private-apis": "wp-6.6",
 		"@wordpress/rich-text": "wp-6.6",
-		"@wordpress/priority-queue": "wp-6.6",
 		"@wordpress/url": "wp-6.6",
 		"clsx": "2.1.x",
 		"deepmerge": "^4.3.1",
