Retrieving two-letter country code from the three-letter code with league/iso3166 + additional fixes (#61678)
* Fix PayPal Standard country code format

* Add changefile(s) from automation for the following project(s): woocommerce

* Add missing param to substr

* Using a constant for the country code length limit

* Logging when a country code is longer than expected

* Retrieving 2 letter country code from the 3 letter code using the symfony/intl package

* Modifying locale parts comparison

* Using the existing PayPal country code length constant

* Making the code lowercase

* Logging the three-letter country code

* Revert unnecessary changes

* PNPM locl file

* Moving the country code logic to a new private method

* installing specific package version

* Revert unnecessary change

* Add changefile(s) from automation for the following project(s): woocommerce

* Update plugins/woocommerce/includes/gateways/paypal/includes/class-wc-gateway-paypal-request.php

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* Fix package usage after namespace update

* Keeping the raw country code value in log

* Moving the composer package to the lib directory

* Check if the two-letter country code exists before returning

* Checking if the three-letter code is valid

* Normalizing to uppercase + improving code readability

* Removing the symfony/intl package

* Installing the league/iso3166 package

* Implementing the league/iso3166 package

* Fix lint issues

* Fix lint issues

* Add changefile(s) from automation for the following project(s): woocommerce

* Moving the alpha 2 code retrieval logic to the WC_Countries class

* Removing exception thrown definition

* Fix missing exception variable

* Update plugins/woocommerce/includes/class-wc-countries.php

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* Unit test

* Fix lint issues

* Renaming method to get_country_from_alpha_3_code

* Fix 

--- a/plugins/woocommerce/lib/composer.json
+++ b/plugins/woocommerce/lib/composer.json
@@ -9,7 +9,8 @@
 	"require-dev": {
 		"mobiledetect/mobiledetectlib": "^3.74",
 		"psr/container": "^1.1",
-		"pelago/emogrifier": "7.3.0"
+		"pelago/emogrifier": "7.3.0",
+		"league/iso3166": "^4.3.3"
 	},
 	"config": {
 		"platform": {
@@ -31,7 +32,8 @@
 			"packages": [
 				"psr/container",
 				"mobiledetect/mobiledetectlib",
-				"pelago/emogrifier"
+				"pelago/emogrifier",
+				"league/iso3166"
 			],
 			"excluded_packages": [
 			],
