--- a/packages/js/sanitize/package.json
+++ b/packages/js/sanitize/package.json
@@ -30,6 +30,7 @@
 		"@babel/core": "7.25.7",
 		"@types/dompurify": "^2.0.4",
 		"@types/jest": "29.5.x",
+		"@types/trusted-types": "^2.0.7",
 		"@woocommerce/eslint-plugin": "workspace:*",
 		"@woocommerce/internal-js-tests": "workspace:*",
 		"@wordpress/scripts": "^27.0.0",
