Prepares an initial release of the `woocommerce/sanitize` package for distribution (#61651)
* adds changelog folder to sanizite package

* adds changelog scaffold

* adds initial changelog for release

* prepare changelog for initial release

* removes changelog link to 404

* Updated `package.json` Scripts

* Only Include Specific Files

* Fixed ESM Export

* Updated Wireit Caching

---------

Co-authored-by: Christopher Allford <6451942+ObliviousHarmony@users.noreply.github.com>

--- a/plugins/woocommerce/client/admin/package.json
+++ b/plugins/woocommerce/client/admin/package.json
@@ -289,6 +289,10 @@
 			"allowUsuallyExcludedPaths": true,
 			"files": [
 				"package.json",
+				"node_modules/@woocommerce/sanitize/build",
+				"node_modules/@woocommerce/sanitize/build-module",
+				"node_modules/@woocommerce/sanitize/build-style",
+				"node_modules/@woocommerce/sanitize/build-types",
 				"node_modules/@woocommerce/admin-layout/build",
 				"node_modules/@woocommerce/admin-layout/build-module",
 				"node_modules/@woocommerce/admin-layout/build-style",
