--- a/plugins/woocommerce/package.json
+++ b/plugins/woocommerce/package.json
@@ -793,6 +793,9 @@
 						}
 					},
 					"events": [
+						"pull_request",
+						"nightly-checks",
+						"release-checks",
 						"blocks-e2e-wp-pre-release"
 					],
 					"report": {
