Apply `Release` label and PR reviewer for release related PRs (#62139)
* Skip the automatic PR reviewer for release related PRs

* Asign `Release` label to all release related PRs

* Add the gh actor to changelog PRs

* Pass the ga param to the changelog command

* Fix command error

* Use woocommerce bot since it has permissions to add labels

* Remove changes for changelog

* Remove unnecessary reviewer

* Add the pr author as reviewer

--- a/.github/workflows/release-bump-version.yml
+++ b/.github/workflows/release-bump-version.yml
@@ -171,5 +171,6 @@ jobs:
             --body 'This PR updates the versions in ${{ inputs.branch }} to ${{ steps.compute-new-version.outputs.nextVersion }}.' \
             --base ${{ inputs.branch }} \
             --head ${branch_name} \
-            --label Release
+            --label Release \
+            --reviewer "${{ github.actor }}"
 
