dev: Update Playwright to 1.57.0 and CTRF reporter to 0.0.27 (#62189)

--- a/.syncpackrc
+++ b/.syncpackrc
@@ -329,7 +329,16 @@
 			"packages": [
 				"**"
 			],
-			"pinVersion": "^1.50.1"
+			"pinVersion": "^1.57.0"
+		},
+		{
+			"dependencies": [
+				"playwright-ctrf-json-reporter"
+			],
+			"packages": [
+				"**"
+			],
+			"pinVersion": "0.0.27"
 		},
 		{
 			"dependencies": [
