--- a/plugins/woocommerce/client/blocks/package.json
+++ b/plugins/woocommerce/client/blocks/package.json
@@ -109,7 +109,7 @@
 		"@babel/preset-react": "7.25.7",
 		"@babel/preset-typescript": "7.25.7",
 		"@bartekbp/typescript-checkstyle": "5.0.0",
-		"@playwright/test": "^1.50.1",
+		"@playwright/test": "^1.57.0",
 		"@storybook/addon-a11y": "7.5.2",
 		"@storybook/addon-actions": "^7.6.4",
 		"@storybook/addon-docs": "^7.6.4",
@@ -219,7 +219,7 @@
 		"markdown-it": "13.0.1",
 		"mini-css-extract-plugin": "2.9.x",
 		"msw": "2.10.4",
-		"playwright-ctrf-json-reporter": "^0.0.26",
+		"playwright-ctrf-json-reporter": "0.0.27",
 		"postcss": "8.4.x",
 		"postcss-color-function": "4.1.0",
 		"postcss-loader": "4.3.x",
