--- a/plugins/woocommerce/package.json
+++ b/plugins/woocommerce/package.json
@@ -880,7 +880,7 @@
 		"@babel/core": "7.25.7",
 		"@babel/preset-env": "7.25.7",
 		"@faker-js/faker": "^9.3.0",
-		"@playwright/test": "^1.50.1",
+		"@playwright/test": "^1.57.0",
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
 		"@typescript-eslint/experimental-utils": "^5.62.0",
 		"@typescript-eslint/parser": "^5.62.0",
@@ -904,7 +904,7 @@
 		"eslint-plugin-playwright": "0.22.1",
 		"jest": "29.5.x",
 		"nodemon": "^3.0.2",
-		"playwright-ctrf-json-reporter": "^0.0.26",
+		"playwright-ctrf-json-reporter": "0.0.27",
 		"prettier": "npm:wp-prettier@^2.8.5",
 		"rimraf": "5.0.5",
 		"stylelint": "^14.16.1",
