--- a/.github/workflows/package-release.yml
+++ b/.github/workflows/package-release.yml
@@ -11,7 +11,9 @@ on:
         type: boolean
         required: false
 
-permissions: { }
+permissions: {   
+  id-token: write  # Required for OIDC
+}
 
 jobs:
   release:
@@ -34,7 +36,5 @@ jobs:
 
       - name: Execute script
         run: |
-          npm config set '//registry.npmjs.org/:_authToken' "${NODE_AUTH_TOKEN}"
+          npm install -g npm@latest # Need NPM 11.5.1+ for OIDC support. pnpm publish passes through to npm.
           ./tools/package-release/bin/dev publish ${{ github.event.inputs.packages }} --branch=${{ github.ref_name }} ${{ ( github.event.inputs.dry_run == 'true' && '--dry-run' ) || '' }} --skip-install
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
