Add PHPStan analysis Github action to the WooCommerce plugin (#62064)
* Add phpstan analysis

* Update config and baseline

* Add Github action for PHPStan analysis

* Add phpstan files to the distignore

* Fix missing feature config file when using phpstan

* Add optional to feature config path

* Update memory limit and processes

* Skip php stubs with linting and update README

* Add changelog

* Update to use PHP 7.4

* Use pnpm to run phpstan instead

* Update baseline

* Update baseline with PHP 7.4 run

* Remove extension installer and load extension directly

* Update composer.lock to sync with composer.json after rebase

- Update php-stubs/wordpress-stubs constraint to ^6.8 and lock to v6.8.3
- Update woocommerce/monorepo-plugin to current branch
- Remove phpstan/extension-installer (per previous commit)

* Use newer PHP version when running phpstan

PHPStan can be configured to run on older PHP versions, but the installed PHP binary can be of a newer version

PHPStan internally assesses the code with older syntax.

This allows us to update to a newer version of - php-stubs/wordpress-stubs

* Update phpstan-baseline.neon

---------

Co-authored-by: Nikhil <nikhil.chavan@automattic.com>
Co-authored-by: Chi-Hsuan Huang <chihsuan.tw@gmail.com>

--- a/plugins/woocommerce/package.json
+++ b/plugins/woocommerce/package.json
@@ -49,6 +49,8 @@
 		"lint:php:changes:branch": "composer run-script lint-branch",
 		"lint:php:changes:staged": "composer run-script lint-staged",
 		"lint:php:fix": "composer run-script phpcbf",
+		"phpstan": "composer run-script phpstan",
+		"phpstan:baseline": "composer run-script phpstan:baseline",
 		"make:collection": "pnpm exec wc-api-tests make:collection",
 		"makepot": "XDEBUG_MODE=off composer run-script makepot",
 		"test": "pnpm test:unit",
