--- a/plugins/woocommerce/composer.json
+++ b/plugins/woocommerce/composer.json
@@ -65,9 +65,12 @@
 		"dms/phpunit-arraysubset-asserts": "^0.4.0",
 		"johnkary/phpunit-speedtrap": "*",
 		"mockery/mockery": "1.6.6",
+		"php-stubs/wordpress-stubs": "^6.8",
+		"phpstan/phpstan": "^2.1",
 		"phpunit/phpunit": "^9.6",
 		"sebastian/comparator": "^4.0",
 		"spatie/phpunit-watcher": "^1.23",
+		"szepeviktor/phpstan-wordpress": "^2.0",
 		"woocommerce/monorepo-plugin": "*",
 		"yoast/phpunit-polyfills": "^2.0"
 	},
@@ -153,6 +156,12 @@
 		],
 		"build-lib": [
 			"sh ./bin/build-lib.sh"
+		],
+		"phpstan": [
+			"vendor/bin/phpstan analyse --configuration=phpstan.neon --memory-limit=4G"
+		],
+		"phpstan:baseline": [
+			"vendor/bin/phpstan analyse --configuration=phpstan.neon --memory-limit=4G --generate-baseline=phpstan-baseline.neon"
 		]
 	},
 	"extra": {
@@ -167,6 +176,8 @@
 			"test": "Run unit tests",
 			"phpcs": "Analyze code against the WordPress coding standards with PHP_CodeSniffer",
 			"phpcbf": "Fix coding standards warnings/errors automatically with PHP Code Beautifier",
+			"phpstan": "Run PHPStan static analysis on the WooCommerce plugin",
+			"phpstan:baseline": "Generate a PHPStan baseline file to ignore existing errors",
 			"makepot-audit": "Generate i18n/languages/woocommerce.pot file and run audit",
 			"makepot": "Generate i18n/languages/woocommerce.pot file"
 		},
